--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -88,7 +88,9 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/7126128?v=4",
       "profile": "https://narrationbox.com/",
       "contributions": [
-        "code"
+        "code",
+        "doc",
+        "example"
       ]
     },
     {
