--- a/js/package.json
+++ b/js/package.json
@@ -16,6 +16,7 @@
         "xterm": "^4.11.0",
         "xterm-addon-fit": "^0.5.0",
         "xterm-addon-web-links": "^0.4.0",
-        "xterm-addon-webgl": "^0.10.0"
+        "xterm-addon-webgl": "^0.10.0",
+        "zmodem.js": "^0.1.10"
     }
 }
