--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -22,7 +22,6 @@ jobs:
       with:
         go-version: 1.16
 
-
     - name: "Build & test"
       run: "make tools release-artifacts"
 
@@ -35,3 +34,21 @@ jobs:
         files: |
           LICENSE
           builds/dist/*
+
+    - uses: docker/setup-qemu-action@v1
+
+    - uses: docker/setup-buildx-action@v1
+
+    - uses: docker/login-action@v1
+      with:
+        username: "${{ secrets.DOCKER_HUB_USER }}"
+        password: "${{ secrets.DOCKER_HUB_TOKEN }}"
+
+    - name: "Build and push docker image"
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        platforms: linux/amd64,linux/arm/v7,linux/arm64
+        push: true
+        tags: "${{ secrets.DOCKER_REPO }}:latest"
