--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -351,6 +351,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "xgdgsc",
+      "name": "xgdgsc",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1189869?v=4",
+      "profile": "https://github.com/xgdgsc",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
