--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -360,6 +360,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "flechaig",
+      "name": "flechaig",
+      "avatar_url": "https://avatars.githubusercontent.com/u/10887132?v=4",
+      "profile": "https://github.com/flechaig",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
