--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,24 +1,30 @@
-name: Go
+name: "Unit and Build Tests"
 
 on:
-  - push
+  push:
+  pull_request:
+    branches: [ master ]
+
 
 jobs:
+  build-test:
+    runs-on: "ubuntu-latest"
 
-  build:
-    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
-        go-version: 1.16
+        go-version: 1.19
 
-    - name: Test
-      run: make test
+    - name: "Build & test"
+      run: "make tools test cross_compile"
 
-    - name: Build
-      run: make tools cross_compile
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: binaries
+        path: builds/pkg/*/gotty
