--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -378,6 +378,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "dmartin",
+      "name": "Dustin Martin",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1657652?v=4",
+      "profile": "https://github.com/dmartin",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
