--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -387,6 +387,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "ahmetb",
+      "name": "Ahmet Alp Balkan",
+      "avatar_url": "https://avatars.githubusercontent.com/u/159209?v=4",
+      "profile": "https://ahmet.dev/",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
