--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -396,6 +396,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "CoconutMacaroon",
+      "name": "CoconutMacaroon",
+      "avatar_url": "https://avatars.githubusercontent.com/u/45187468?v=4",
+      "profile": "https://github.com/CoconutMacaroon",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
