--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -415,6 +415,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "George-NG",
+      "name": "George-NG",
+      "avatar_url": "https://avatars.githubusercontent.com/u/28577165?v=4",
+      "profile": "https://github.com/George-NG",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
