--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -442,6 +442,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "kaisawind",
+      "name": "kaisawind",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4010613?v=4",
+      "profile": "https://github.com/kaisawind",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
