--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -433,6 +433,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "jpillora",
+      "name": "Jaime Pillora",
+      "avatar_url": "https://avatars.githubusercontent.com/u/633843?v=4",
+      "profile": "https://jpillora.com/",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
