Update @prusnak as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -322,7 +322,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/42201?v=4",
       "profile": "https://rusnak.io/",
       "contributions": [
-        "code"
+        "code",
+        "bug"
       ]
     },
     {
