--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -478,6 +478,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "Nexuist",
+      "name": "Andi Andreas",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1498061?v=4",
+      "profile": "http://duro.me/",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
