--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -488,6 +488,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "qigj",
+      "name": "qigj",
+      "avatar_url": "https://avatars.githubusercontent.com/u/56585735?v=4",
+      "profile": "https://github.com/qigj",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
