--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -497,6 +497,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "shuaiyy",
+      "name": "shuaiyy",
+      "avatar_url": "https://avatars.githubusercontent.com/u/19821321?v=4",
+      "profile": "https://github.com/shuaiyy",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
