--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -507,6 +507,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "v20z",
+      "name": "v20z",
+      "avatar_url": "https://avatars.githubusercontent.com/u/2884824?v=4",
+      "profile": "https://github.com/v20z",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
