--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -517,6 +517,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "Yann-Qiu",
+      "name": "Yanfeng Qiu",
+      "avatar_url": "https://avatars.githubusercontent.com/u/56961747?v=4",
+      "profile": "https://github.com/Yann-Qiu",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
