--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -11,7 +11,12 @@ jobs:
     name: "Pre Release Docker"
     runs-on: "ubuntu-latest"
 
+
     steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+
     - uses: docker/setup-qemu-action@v1
 
     - uses: docker/setup-buildx-action@v1
