Improve JS workflow
Now we can launch Chrome from vscode and also set breakpoints and have
them be respected.

Work still to be done:

The "Launch Chrome" task should compile the typescript stuff.

It takes too long to rebuild the typescript stuff. It is bothersome
during development. If we can work around that with webpack, that's
great. If generating the gotty bundle is what makes it all time
consuming, we should skip the bundle generation for development and
change the index.html to point to a not-bundled version.

Partially fixes #3

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,21 @@
         {
             "name": "Launch GoTTY",
             "type": "go",
+            "buildFlags": "-tags=dev",
             "request": "launch",
             "mode": "debug",
             "program": "${workspaceFolder}",
             "args": ["-a", "127.0.0.1", "-w", "bash"]
-        }
+        },
+        {
+            "name": "Launch Chrome",
+            "type": "chrome",
+            "url": "http://127.0.0.1:8080",
+            "webRoot": "${workspaceFolder}/js",
+            "outFiles": [
+                "${workspaceFolder}/**/*.js",
+                "!**/node_modules/**"
+            ],
+        },
     ]
 }
