--- a/js/package.json
+++ b/js/package.json
@@ -24,6 +24,7 @@
         "preact": "^10.7.1",
         "react-bootstrap": "^2.2.3",
         "style-loader": "^2.0.0",
+        "webpack-dev-server": "^4.11.1",
         "xterm": "^4.12.0",
         "xterm-addon-fit": "^0.5.0",
         "xterm-addon-web-links": "^0.4.0",
