--- a/js/package.json
+++ b/js/package.json
@@ -14,7 +14,8 @@
         "ts-loader": "^8.3.0",
         "typescript": "^4.3.2",
         "webpack": "^5.72.0",
-        "webpack-cli": "^4.7.0"
+        "webpack-cli": "^4.7.0",
+        "webpack-dev-server": "^4.11.1"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
@@ -24,7 +25,6 @@
         "preact": "^10.7.1",
         "react-bootstrap": "^2.2.3",
         "style-loader": "^2.0.0",
-        "webpack-dev-server": "^4.11.1",
         "xterm": "^4.12.0",
         "xterm-addon-fit": "^0.5.0",
         "xterm-addon-web-links": "^0.4.0",
