--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -1,10 +1,10 @@
 ---
 name: "pre-release"
 
-on:
-  push:
-    branches:
-      - "master"
+on: [push]
+
+env:
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   pre-release-docker:
@@ -13,15 +13,31 @@ jobs:
 
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         fetch-depth: 0
+
+    -
+      name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: ${{ env.IMAGE_NAME }}
+        tags: |
+          type=raw,value=latest,enable={{is_default_branch}}
+          type=sha,format=long
+          type=sha
+          type=semver,pattern=v{{major}}.{{minor}}.{{patch}}
+          type=semver,pattern=v{{major}}.{{minor}}
+          type=semver,pattern=v{{major}}
+          type=ref,event=tag
+          type=ref,event=branch
 
     - uses: docker/setup-qemu-action@v1
 
     - uses: docker/setup-buildx-action@v1
 
-    - uses: docker/login-action@v1
+    - uses: docker/login-action@v2
       with:
         username: "${{ secrets.DOCKER_HUB_USER }}"
         password: "${{ secrets.DOCKER_HUB_TOKEN }}"
@@ -33,4 +49,5 @@ jobs:
         file: ./Dockerfile
         platforms: linux/amd64,linux/arm/v7,linux/arm64
         push: true
-        tags: "${{ secrets.DOCKER_REPO }}:latest"
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
