--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -30,6 +30,7 @@ jobs:
     - uses: docker/setup-qemu-action@v2
     - uses: docker/setup-buildx-action@v2
     - uses: docker/login-action@v2
+      if: ${{ !env.ACT }}
       with:
         username: "${{ secrets.DOCKER_HUB_USER }}"
         password: "${{ secrets.DOCKER_HUB_TOKEN }}"
@@ -37,6 +38,6 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         platforms: linux/amd64,linux/arm/v7,linux/arm64
-        push: true
+        push: ${{ !env.ACT }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
