--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -522,6 +522,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "0xcanary",
+      "name": "0xcanary",
+      "avatar_url": "https://avatars.githubusercontent.com/u/129939236?v=4",
+      "profile": "https://github.com/0xcanary",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
