--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -531,6 +531,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "alirezafarnoosh",
+      "name": "alirezafarnoosh",
+      "avatar_url": "https://avatars.githubusercontent.com/u/47647930?v=4",
+      "profile": "https://github.com/alirezafarnoosh",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
