--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -549,6 +549,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "dillfrescott",
+      "name": "Cross Nastasi",
+      "avatar_url": "https://avatars.githubusercontent.com/u/56714680?v=4",
+      "profile": "https://github.com/dillfrescott",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
