Add @imcnanie as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -576,6 +576,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "imcnanie",
+      "name": "imcnanie",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4652417?v=4",
+      "profile": "https://github.com/imcnanie",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
