Add @huiwq1990 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -567,6 +567,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "huiwq1990",
+      "name": "huiwq1990",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4555057?v=4",
+      "profile": "https://github.com/huiwq1990",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
