--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -603,6 +603,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "mrinalwahal",
+      "name": "Mrinal Wahal",
+      "avatar_url": "https://avatars.githubusercontent.com/u/9859731?v=4",
+      "profile": "https://github.com/mrinalwahal",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
