--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -612,6 +612,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "stevelaclasse",
+      "name": "stevelaclasse",
+      "avatar_url": "https://avatars.githubusercontent.com/u/29569191?v=4",
+      "profile": "https://github.com/stevelaclasse",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7
