--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -621,6 +621,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "180909",
+      "name": "180909",
+      "avatar_url": "https://avatars.githubusercontent.com/u/70465953?v=4",
+      "profile": "https://github.com/180909",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
