--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -639,6 +639,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "callumgare",
+      "name": "Callum Gare",
+      "avatar_url": "https://avatars.githubusercontent.com/u/346340?v=4",
+      "profile": "https://callum.gare.au/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
