Update @guyou as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -566,7 +566,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/47187?v=4",
       "profile": "http://nathguil.free.fr/",
       "contributions": [
-        "bug"
+        "bug",
+        "code"
       ]
     },
     {
