--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -367,7 +367,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/10887132?v=4",
       "profile": "https://github.com/flechaig",
       "contributions": [
-        "bug"
+        "bug",
+        "code"
       ]
     },
     {
