--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -658,6 +658,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "funnywwh",
+      "name": "zigger",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4208460?v=4",
+      "profile": "https://github.com/funnywwh",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
