--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -669,6 +669,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "llaoj",
+      "name": "老J",
+      "avatar_url": "https://avatars.githubusercontent.com/u/17629142?v=4",
+      "profile": "https://github.com/llaoj",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
