Update @josegonzalez as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -594,7 +594,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/65675?v=4",
       "profile": "https://github.com/josegonzalez",
       "contributions": [
-        "bug"
+        "bug",
+        "code"
       ]
     },
     {
