--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -706,6 +706,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "sagar-salvi-unskript",
+      "name": "sagar-salvi-unskript",
+      "avatar_url": "https://avatars.githubusercontent.com/u/95602213?v=4",
+      "profile": "https://github.com/sagar-salvi-unskript",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
