--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -25,7 +25,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/160090?v=4",
       "profile": "http://linux2go.dk/",
       "contributions": [
-        "bug"
+        "bug",
+        "code"
       ]
     },
     {
