--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -687,6 +687,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "nuttingd",
+      "name": "David Nutting",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1181562?v=4",
+      "profile": "https://github.com/nuttingd",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
