--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -697,6 +697,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "rlmcpherson",
+      "name": "Randall McPherson",
+      "avatar_url": "https://avatars.githubusercontent.com/u/1706273?v=4",
+      "profile": "https://github.com/rlmcpherson",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
