Add @uddmorningsun as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -716,6 +716,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "uddmorningsun",
+      "name": "uddmorningsun",
+      "avatar_url": "https://avatars.githubusercontent.com/u/19144683?v=4",
+      "profile": "https://github.com/uddmorningsun",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
