--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -360,7 +360,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/1189869?v=4",
       "profile": "https://github.com/xgdgsc",
       "contributions": [
-        "bug"
+        "bug",
+        "code"
       ]
     },
     {
