--- a/js/package.json
+++ b/js/package.json
@@ -1,34 +1,34 @@
 {
     "name": "gotty",
-    "version": "1.4.0",
+    "version": "1.6.1",
     "private": true,
     "devDependencies": {
         "@types/bootstrap": "^5.2.10",
-        "compression-webpack-plugin": "^9.2.0",
-        "license-loader": "^0.5.0",
+        "css-loader": "^7.1.2",
+        "compression-webpack-plugin": "^11.1.0",
+        "license-loader": "^0.7.0",
         "license-webpack-plugin": "^4.0.2",
-        "purgecss": "^4.1.3",
-        "sass": "^1.70.0",
-        "sass-loader": "^12.6.0",
-        "terser-webpack-plugin": "^5.3.10",
-        "ts-loader": "^8.4.0",
-        "typescript": "^4.9.5",
-        "webpack": "^5.90.1",
-        "webpack-cli": "^4.10.0",
+        "purgecss": "^7.0.2",
+        "sass": "^1.89.2",
+        "sass-loader": "^16.0.5",
+        "style-loader": "^4.0.0",
+        "terser-webpack-plugin": "^5.3.14",
+        "ts-loader": "^9.5.2",
+        "typescript": "^5.9.2",
+        "webpack": "^5.101.0",
+        "webpack-cli": "^6.0.1",
         "webpack-dev-server": "^5.2.2"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.2",
-        "css-loader": "^5.2.7",
-        "debounce": "^1.2.1",
-        "preact": "^10.19.4",
-        "react-bootstrap": "^2.10.1",
-        "style-loader": "^2.0.0",
-        "xterm": "^5.3.0",
-        "xterm-addon-fit": "^0.8.0",
-        "xterm-addon-web-links": "^0.9.0",
-        "xterm-addon-webgl": "^0.16.0",
+        "@xterm/addon-fit": "^0.10.0",
+        "@xterm/addon-web-links": "^0.11.0",
+        "@xterm/addon-webgl": "^0.18.0",
+        "@xterm/xterm": "^5.5.0",
+        "bootstrap": "^5.3.7",
+        "debounce": "^2.2.0",
+        "preact": "^10.27.0",
+        "react-bootstrap": "^2.10.10",
         "zmodem.js": "^0.1.10"
     }
 }
